--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-/node_modules/
-/public/images/
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
